# ds-manipulation-with-mongodb

./: README.md  pyproject.toml
project/task_1/: main.py
project/task_2/: save_to_mongodb.py  scraping_parsing.py
